# drug-disease-hypothesis

./: .gitattributes  .gitignore  DATA.md  METHODS.md  README.md  pyproject.toml  requirements.txt
.github/: ci.yml
.ipynb_checkpoints/: README-checkpoint.md
data/real/: Untitled.ipynb
data/toy/: toy_diseases.csv  toy_drug_targets.csv  toy_drugs.csv  toy_gene_disease.csv  toy_genes.csv  toy_ppi.csv
notebooks/: 01_toy_exploration.ipynb.ipynb  02_real_exploration.ipynb  03_runtime_and_scaling.ipynb
scripts/: check_raw_data.py  enrich_disease_names.py  enrich_drug_names.py  filter_drug_targets_by_moa.py  filter_real_data.py  map_drug_targets_to_ensembl.py  opentargets_associations_to_csv.py  opentargets_diseases_to_lookup.py  opentargets_drugs_to_lookup.py  opentargets_known_drug_to_pairs.py  opentargets_moa_to_pairs.py  opentargets_targets_to_mapping.py  precompute_gene_distance_matrix.py  prepare_drug_targets_from_csv.py  prepare_gene_disease_from_csv.py
scripts/.ipynb_checkpoints/: annotate_pairs_with_ppi_from_matrix-checkpoint.py  opentargets_molecular_interactions_to_ppi-checkpoint.py  prepare_genes_from_real_data-checkpoint.py
src/ddh/: __init__.py  cli.py  config.py  data_models.py  graphs.py  io_handlers.py  ml_scoring.py  pipeline.py  scoring.py
tests/: test_graphs.py  test_ml_scoring.py  test_scoring.py
